# ws

./: README.md  cpp_template.cpp
install/: local_setup.sh  setup.sh
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.sh  package.sh
install/my_robot_interfaces/share/my_robot_interfaces/action/: CountUntil.idl  CountUntil.json
install/my_robot_interfaces/share/my_robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_my_robot_interfaces__rosidl_generator_cExport-noconfig.cmake  export_my_robot_interfaces__rosidl_generator_cExport.cmake  export_my_robot_interfaces__rosidl_generator_cppExport.cmake  export_my_robot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_my_robot_interfaces__rosidl_generator_pyExport.cmake  export_my_robot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_my_robot_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_robot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  my_robot_interfacesConfig.cmake  my_robot_interfaces__rosidl_typesupport_cExport-noconfig.cmake  my_robot_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  my_robot_interfaces__rosidl_typesupport_cppExport.cmake  my_robot_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_robot_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  my_robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/number_counter_py/lib/number_counter_py/: number_counter_py
install/number_counter_py/share/number_counter_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/number_publisher/lib/number_publisher/: number_publisher
install/number_publisher/share/number_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/service_client_cpp/lib/service_client_cpp/: call_client
install/service_client_cpp/share/service_client_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/temperature/lib/temperature/: publish_temp
install/temperature/share/temperature/: package.dsv  package.ps1  package.sh  package.xml
install/turtle_challenge_cpp/share/turtle_challenge_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
my_py_pkg/: setup.py
my_py_pkg/my_py_pkg/: count_until_client.py  count_until_client_minimal.py  count_until_server.py  count_until_server_minimal.py
my_robot_interfaces/: CMakeLists.txt  package.xml
number_counter_py/: package.xml  setup.cfg  setup.py
number_counter_py/number_counter_py/: number_counter_py.py
number_publisher/: package.xml  setup.cfg  setup.py
number_publisher/number_publisher/: number_publisher.py
service_client_cpp/: CMakeLists.txt
service_client_cpp/src/: call_client.cpp
temperature/: package.xml  setup.py
temperature/temperature/: publish_temp.py
turtle_challenge_cpp/: CMakeLists.txt  package.xml
turtle_challenge_cpp/config/: turtle_challenge_params.yaml
turtle_challenge_cpp/src/: challenge2.cpp  challenge2_parameters.cpp
(+50 files in other folders)
